--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,36 +1,43 @@
-name: Build APK
+name: Android CI
 
 on:
   push:
-    branches:
-      - '*'
+    branches: [ "**" ]
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
   pull_request:
-    branches:
-      - '*'
+    branches: [ "**" ]
     paths-ignore:
-      - '**.md'
+      - '**/*.md'
   workflow_dispatch:
 
 jobs:
   build:
+    name: Build Sakura
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: 11
-          distribution: 'zulu'
-          cache: 'gradle'
+          java-version: '21'
+          distribution: 'oracle'
+          cache: gradle
 
-      - name: Build OpenCord
-        run: ./gradlew app:assembleDebug
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-      - name: Upload Discord APK
-        uses: actions/upload-artifact@v2
+      - name: Validate Gradle wrapper
+        uses: gradle/actions/wrapper-validation@v4
+        
+      - name: Build OpenCord Debug
+        run: ./gradlew assembleDebug
+
+      - name: Upload release app
+        uses: actions/upload-artifact@v4
         with:
-          name: opencord
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: opencord-debug
+          path: app/build/outputs/apk/debug/
